--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
         <meta charset="utf-8" />
         <title>PequiLeaks</title>
-        <link rel="stylesheet" href="/theme/css/main.css" />
+        <link rel="stylesheet" href="https://github.com/PequiLeaks/pequileaks/blob/gh-pages/theme/css/main.css" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
